--- a/PawsClaws/Pages/Contact.cshtml
+++ b/PawsClaws/Pages/Contact.cshtml
@@ -6,7 +6,23 @@
 <h2>@ViewData["Title"]</h2>
 <!--<h3>@Model.Message</h3>-->
 
+<style>
+    #hours{
+    background-color:lightgray;
+    width: 320px;
+    height: 550px;
+    margin-left: 1000px;
+    margin-top: 50px;
+    }
 
+    #contacForm{
+    background-color:lightgray;
+    width: 450px;
+    height: 550px;
+    margin-right: 450px;
+    }
+
+</style>
 <div id="contacForm">
 
     <form action="/action_page.php">
