--- a/PawsClaws/Pages/Contact.cshtml
+++ b/PawsClaws/Pages/Contact.cshtml
@@ -3,59 +3,113 @@
 @{
     ViewData["Title"] = "Contact Us";
 }
-<h2>@ViewData["Title"]</h2>
+<!--<h2>@ViewData["Title"]</h2>-->
 <!--<h3>@Model.Message</h3>-->
 
 <style>
-    #hours{
-    background-color:lightgray;
-    width: 320px;
-    height: 550px;
-    margin-left: 1000px;
-    margin-top: 50px;
+    .row {
+        display: flex;
+        flex-direction: row;
     }
 
-    #contacForm{
-    background-color:lightgray;
-    width: 450px;
-    height: 550px;
-    margin-right: 450px;
+    .col {
+        flex-basis: 0;
+        flex-grow: 1;
+        max-width: 100%;
     }
 
+    .main-wrapper {
+        background-color: rgb(27,27,27);
+        position: relative;
+        /* top: 50px; */
+        right: 0;
+        /* bottom: 100px; */
+        left: 0;
+        /* margin-bottom: 100px;*/
+    }
+
+    .row-inner {
+        padding-left: 15px;
+        text-align: center;
+        color: white;
+    }
+
+    .h2-header {
+        /*padding-left: 50px;*/
+        text-align: center;
+        color: white;
+        font-family: 'Franklin Gothic';
+        font-weight: bold;
+    }
+
+    .central-wrapper {
+        height: auto; /*if more info comes on the page, it will stretch down*/
+        width: 1000px;
+        margin: 0 auto; /*this will cause the div to be in the center*/
+    }
 </style>
-<div id="contacForm">
 
-    <form action="/action_page.php">
-        <p>Name:</p>
-        <input type="text" name="FirstName" placeholder=" First Name" />
-        <input type="text" name="LastName" placeholder="Last Name" />
+<div class="central-wrapper">
+    <div class="main-wrapper">
+        <div class="h2-header">
+            <h2>Get In Touch</h2>
+        </div>
 
-        <p>Email:</p>
-        <input type="email" name="email" placeholder="example@gmail.com" />
+        <div class="row-inner">
+            <div class="row">
+                <div class="col">
+                    <p>Phone: (903) 312-7585</p>
+                </div>
+                <div class="col">
+                    <p>Email: nicholaspethaven@yahoo.com</p>
+                </div>
+            </div>
+        </div>
 
-        <p>Phone Number:</p>
-        <input type="number" name="phoneNumber" placeholder="555-555-5555" />
-
-        <p>Message:</p>
-        <textarea name="message" rows="10" cols="45"></textarea>
-        <br />
-
-        <input type="submit" value="Submit" />
-    </form>
+    </div>
 </div>
 
-<div id="hours">
-    <h2>Hours</h2>
-    <ul>
-        <li>Sunday     Closed</li>
-        <li>Monday     10AM-2PM</li>
-        <li>Tuesday    10AM-2PM</li>
-        <li>Wednesday  10AM-2PM</li>
-        <li>Thursday   10AM-2PM</li>
-        <li>Friday     10AM-2PM</li>
-        <li>Saturday   10AM-2PM</li>
-    </ul>
+<br />
+
+<div class="container-fluid">
+    <h1> Your Information</h1>
+    <div class="row">
+        <div id="contacForm" class="col">
+
+            <form action="/action_page.php">
+                <p>Name:</p>
+                <input type="text" name="FirstName" placeholder=" First Name" />
+                <input type="text" name="LastName" placeholder="Last Name" />
+
+                <p>Email:</p>
+                <input type="email" name="email" placeholder="example@gmail.com" />
+
+                <p>Phone Number:</p>
+                <input type="number" name="phoneNumber" placeholder="555-555-5555" />
+
+                <p>Message:</p>
+                <textarea name="message" rows="10" cols="45"></textarea>
+                <br />
+
+                <input type="submit" value="Submit" />
+            </form>
+        </div>
+
+        <div id="hours" class="col">
+            <h2>Hours</h2>
+            <ul>
+                <li>Sunday     Closed</li>
+                <li>Monday     10AM-2PM</li>
+                <li>Tuesday    10AM-2PM</li>
+                <li>Wednesday  10AM-2PM</li>
+                <li>Thursday   10AM-2PM</li>
+                <li>Friday     10AM-2PM</li>
+                <li>Saturday   10AM-2PM</li>
+            </ul>
+        </div>
+    </div>
 </div>
+
 <br />
 
 <address>
