--- a/PawsClaws/Pages/About.cshtml
+++ b/PawsClaws/Pages/About.cshtml
@@ -8,3 +8,4 @@
 
 <p>Use this area to provide additional information.</p>
 <h1>This a header test</h1>
+<a href="~/Pages/About.cshtml">~/Pages/About.cshtml</a>
