--- a/PawsClaws/Pages/Shared/_Layout.cshtml
+++ b/PawsClaws/Pages/Shared/_Layout.cshtml
@@ -17,25 +17,18 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-inverse navbar-fixed-top">
-        <div class="container">
-            <div class="navbar-header">
-                <button type="button" class="navbar-toggle" data-toggle="collapse" data-target=".navbar-collapse">
-                    <span class="sr-only">Toggle navigation</span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                    <span class="icon-bar"></span>
-                </button>
-                <a asp-page="/Index" class="navbar-brand">PawsClaws</a>
-            </div>
+    <nav class="navbar navbar-default navbar-fixed-top text-center">
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
+                <ul class="nav navbar-nav mr-auto text-center mx-auto my-2 order-0 order-md-1 position-relative">
+                    <li class="mx-auto my-2 order-0 order-md-1 position-relative">
+                        <a asp-page="/Index" class="navbar-brand mx-auto"><img src="~/images/Logo.jpg" height="75" width="75" class="img-rounded" /></a>
+                    </li>
                     <li><a asp-page="/Index">Home</a></li>
+                    <li><a asp-page="/Pets">Pets</a></li>
                     <li><a asp-page="/About">About</a></li>
                     <li><a asp-page="/Contact">Contact</a></li>
                 </ul>
             </div>
-        </div>
     </nav>
 
     <partial name="_CookieConsentPartial" />
