--- a/PawsClaws/wwwroot/css/site.css
+++ b/PawsClaws/wwwroot/css/site.css
@@ -12,6 +12,7 @@ body {
     padding-right: 15px;
 }
 
+
 /* Carousel */
 .carousel-caption p {
     font-size: 20px;
@@ -22,7 +23,10 @@ body {
 .carousel-inner .item img[src$=".svg"] {
     width: 100%;
 }
-
+/*centers image on carousal*/
+.carousel-inner > .item > img {
+    margin: 0 auto;
+}
 /* QR code generator */
 #qrCode {
     margin: 15px;
