Changes to layout of navbar

--- a/PawsClaws/Pages/Shared/_Layout.cshtml
+++ b/PawsClaws/Pages/Shared/_Layout.cshtml
@@ -17,14 +17,14 @@
     </environment>
 </head>
 <body>
-    <nav class="navbar navbar-default navbar-fixed-top d-flex justify-content-around">
+    <nav class="navbar navbar-default navbar-fixed-top">
             <div class="navbar-collapse collapse">
-                <ul class="nav navbar-nav">
-                    <li><a asp-page="/Index" class="navbar-brand mx-auto"><img src="~/images/Logo.jpg" height="75" width="75" class="img-circle" /></a></li>
-                    <li><a asp-page="/Index">Home</a></li>
-                    <li><a asp-page="/Pets">Pets</a></li>
-                    <li><a asp-page="/About">About</a></li>
-                    <li><a asp-page="/Contact">Contact</a></li>
+                <ul class="nav navbar-nav mx-auto">
+                    <li class="col-lg-2"><a asp-page="/Index">Home</a></li>
+                    <li class="col-lg-2"><a asp-page="/Pets">Pets</a></li>
+                    <li class="col-lg-2"><a asp-page="/Index" class="navbar-brand mx-auto"><img src="~/images/Logo.jpg" height="75" width="75" class="img-circle" /></a></li>
+                    <li class="col-lg-2"><a asp-page="/About">About</a></li>
+                    <li class="col-lg-2"><a asp-page="/Contact">Contact</a></li>
                 </ul>
             </div>
     </nav>
