Progress on the Pets page.
-Added a "Models" folder containing a class representation of the "Pet" object. This will be translated directly into the database representation of these objects using some SUPER COOL ASP.Net stuff I learned about today. Still need to finish adding the attributes but it's a start.

-Created a set of fluid containers on the actual Pets  page using HTML and CSS. Currently they're weird colors and just say "Pet 1", "Pet 2", etc., but they're for learning purposes more than anything. Eventually these will be nicely designed and stored in a larger container, and will pull their data from the database objects.

--- a/PawsClaws/Pages/Pets.cshtml
+++ b/PawsClaws/Pages/Pets.cshtml
@@ -4,3 +4,29 @@
     ViewData["Title"] = "Pets";
 }
     <h2>@ViewData["Title"]</h2>
+
+
+<head>
+    <style type="text/css">
+        .my-col {
+            background-color: #00ffff;
+            border: 1px solid #4cff00;
+            height: 120px;
+        }
+    </style>
+</head>
+
+<body>
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 1</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 2</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 3</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 4</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 5</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 6</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 7</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 8</div>
+        </div>
+    </div>
+</body>
