A couple of extra tweaks to the pet page.
-Added a style sheet for the main containing box (mainBox).
-Tweaked the style for pet boxes and renamed it "petBoxes"

--- a/PawsClaws/Pages/Shared/_Layout.cshtml
+++ b/PawsClaws/Pages/Shared/_Layout.cshtml
@@ -31,7 +31,7 @@
 
     <partial name="_CookieConsentPartial" />
 
-    <div class="container-fluid body-content">
+    <div class="container-fluid body-content h-100">
         @RenderBody()
         <hr />
         <footer>
