--- a/PawsClaws/Pages/Pets.cshtml
+++ b/PawsClaws/Pages/Pets.cshtml
@@ -8,25 +8,35 @@
 
 <head>
     <style type="text/css">
-        .my-col {
+        .petBoxes {
             background-color: #00ffff;
             border: 1px solid #4cff00;
             height: 120px;
+            padding: 10px 10px 10px 10px;
+        }
+    </style>
+
+    <style type="text/css">
+        .mainBox {
+            background-color: burlywood;
+            border: 1px solid #000000;
+            height:auto;
+            padding: 100px 20px 100px 20px:
         }
     </style>
 </head>
 
 <body>
-    <div class="container-fluid">
+    <div class="container-fluid mainBox">
         <div class="row">
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 1</div>
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 2</div>
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 3</div>
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 4</div>
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 5</div>
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 6</div>
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 7</div>
-            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 my-col">Pet 8</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 1</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 2</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 3</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 4</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 5</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 6</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 7</div>
+            <div class="col-xs-8 col-sm-4 col-md-2 col-lg-1 petBoxes">Pet 8</div>
         </div>
     </div>
 </body>
