Added Picures for homepage/messed around with layout

--- a/PawsClaws/Pages/About.cshtml
+++ b/PawsClaws/Pages/About.cshtml
@@ -47,14 +47,14 @@
                     <h2>Our Story</h2>
                     <div class="story-section">
                         <p>
-                            Latom when john is killed. David what are we going to have for breakfast.
-                            Apples are orange when the sun is kissed on the belly button.
-                            Don't worry, we'll be ok as long as we stick together.She was too short to see over the fence.
-                            The sky is clear; the stars are twinkling.
-                            It was getting dark, and we weren’t there yet.
-                            Writing a list of random sentences is harder than I initially thought it would be.
-                            The quick brown fox jumps over the lazy dog.
-                            If Purple People Eaters are real… where do they find purple people to eat?
+                            Nicholas Pet Haven was started by Nicholas Nash when he was only 13. 
+                            He is now 19 and has helped rescue so many animals and made some major changes for the dogs and cats. 
+                            Please support his efforts as we continue to grow. 
+                            Our Adoption House is located at 12903 Hwy 155 South in Tyler  TX. 
+                            Come meet our sweet rescued babies available for adoption! 
+                            We are open from 10am-2pm, Monday-Saturday. 
+                            If you are interested but need to meet at a different time, please contact us at the phone number provided or by messaging us. 
+                            Thank you for your support!
                         </p>
 
                         <p>
