--- a/PawsClaws/Pages/Index.cshtml
+++ b/PawsClaws/Pages/Index.cshtml
@@ -3,70 +3,88 @@
 @{
     ViewData["Title"] = "Home page";
 }
-
-<div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000">
-    <ol class="carousel-indicators">
-        <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
-        <li data-target="#myCarousel" data-slide-to="1"></li>
-        <li data-target="#myCarousel" data-slide-to="2"></li>
-    </ol>
-    <div class="carousel-inner" role="listbox" style=" width:100%; height: 500px !important;">
-        <div class="item active">
-                <img src="~/images/Nic.jpg" alt="pic1" class="img-responsive" />
+    <div class="container-fluid">
+        <div class="row">
+            <div class="col-md-8">
+                    <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000" style="width:900px !important">
+                        <ol class="carousel-indicators">
+                            <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
+                            <li data-target="#myCarousel" data-slide-to="1"></li>
+                            <li data-target="#myCarousel" data-slide-to="2"></li>
+                        </ol>
+                        <div class="carousel-inner" role="listbox" style="height: 600px !important; width:900px !important">
+                            <div class="item active">
+                                <img src="~/images/HappyDogLogo.jpg" alt="DogLogo" class="img-responsive" />
+                            </div>
+                            <div class="item">
+                                <img src="~/images/Nic.jpg" alt="NicPic" class="img-responsive" />
+                            </div>
+                            <div class="item">
+                                <img src="~/images/OurStoryPic.jpg" alt="About page" class="img-responsive" />
+                            </div>
+                        </div>
+                        <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
+                            <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
+                            <span class="sr-only">Previous</span>
+                        </a>
+                        <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
+                            <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
+                            <span class="sr-only">Next</span>
+                        </a>
+                    </div>
+            </div>
+            <div class="col-md-4  float-right"">
+                <div id="hours">
+                    <h2>Hours</h2>
+                    <ul>
+                        <li>Sunday     Closed</li>
+                        <li>Monday     10AM-2PM</li>
+                        <li>Tuesday    10AM-2PM</li>
+                        <li>Wednesday  10AM-2PM</li>
+                        <li>Thursday   10AM-2PM</li>
+                        <li>Friday     10AM-2PM</li>
+                        <li>Saturday   10AM-2PM</li>
+                    </ul>
+                </div>
+            </div>
         </div>
-        <div class="item">
-            <img src="~/images/dog.jpg" alt="Visual Studio" class="img-responsive" />
-        </div>
-        <div class="item">
-            <img src="~/images/Cat.jpg" alt="Microsoft Azure" class="img-responsive" />
-        </div>
+            <div class="row">
+                <div class="col-md-3">
+                    <h2>Application uses</h2>
+                    <ul>
+                        <li>Sample pages using ASP.NET Core Razor Pages</li>
+                        <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h2>How to</h2>
+                    <ul>
+                        <li><a href="https://go.microsoft.com/fwlink/?linkid=852130">Working with Razor Pages.</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h2>Overview</h2>
+                    <ul>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
+                    </ul>
+                </div>
+                <div class="col-md-3">
+                    <h2>Run &amp; Deploy</h2>
+                    <ul>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
+                        <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
+                    </ul>
+                </div>
+            </div>
     </div>
-    <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
-        <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
-        <span class="sr-only">Previous</span>
-    </a>
-    <a class="right carousel-control" href="#myCarousel" role="button" data-slide="next">
-        <span class="glyphicon glyphicon-chevron-right" aria-hidden="true"></span>
-        <span class="sr-only">Next</span>
-    </a>
-</div>
-
-<div class="row">
-    <div class="col-md-3">
-        <h2>Application uses</h2>
-        <ul>
-            <li>Sample pages using ASP.NET Core Razor Pages</li>
-            <li>Theming using <a href="https://go.microsoft.com/fwlink/?LinkID=398939">Bootstrap</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>How to</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?linkid=852130">Working with Razor Pages.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699315">Manage User Secrets using Secret Manager.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699316">Use logging to log a message.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699317">Add packages using NuGet.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699319">Target development, staging or production environment.</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Overview</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=518008">Conceptual overview of what is ASP.NET Core</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=699320">Fundamentals of ASP.NET Core such as Startup and middleware.</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398602">Working with Data</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkId=398603">Security</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699321">Client side development</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699322">Develop on different platforms</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=699323">Read more on the documentation site</a></li>
-        </ul>
-    </div>
-    <div class="col-md-3">
-        <h2>Run &amp; Deploy</h2>
-        <ul>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517851">Run your app</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=517853">Run tools such as EF migrations and more</a></li>
-            <li><a href="https://go.microsoft.com/fwlink/?LinkID=398609">Publish to Microsoft Azure App Service</a></li>
-        </ul>
-    </div>
-</div>
