Wow, I THINK the database might work for now. Provided my desktop is running. I'm gonna locally host the DB until we get a webhost sorted out. So, here are some major points that I can remember having altered.
-appsettings.json: changed the connection string to include the new IP address, port, DB name, username, and password. Currently these all point to a "test" database, this whole string will have to change when we set up the production environment. But I've learned a lot about how to set these things up now. Speaking of...

-The database itself: migrated from a strictly localdb instance to a hosted SQL Server instance. This allows me to open up the DB for remote connections, and therefore access the pets page on other machines. I also overhauled the list of users and logins, in order to prepare for the user accounts and their different permission sets that we will be dealing with in the future.

-Added and removed a couple of files from the Data folder. These probably won't stay in their current form, this was just part of my attempts to get a working DB setup.

-Pets/Index: changed the "SpeciesFilter" query option to just "Species". Makes the URL look a little nicer. I also finally figured out how to do what I initially wanted to do with the filter links on the Pets page, so instead of being hyperlinks to "localhost:5001/Pets?Species=*", they're now ASP pages that refer to the site directories itself. This will keep us from having to update them when we get a proper URL.

I think that's it. I'll have to test the database on my laptop, and then other devices. Next items on the to-do list are to add image support to the Pets database, and to create the employee login system.

--- a/PawsClaws/Pages/Pets/Index.cshtml
+++ b/PawsClaws/Pages/Pets/Index.cshtml
@@ -1,4 +1,4 @@
-﻿@page "{SpeciesFilter?}"
+﻿@page "{Species?}"
 @model PawsClaws.Pages.Pets.IndexModel
 
 @{
@@ -8,9 +8,9 @@
 <h2>Pets</h2>
 
 <h4>
-    <a href="https://localhost:5001/Pets/">All</a>
-    <a href="https://localhost:5001/Pets?SpeciesFilter=Cat">Cats</a>
-    <a href="https://localhost:5001/Pets?SpeciesFilter=Dog">Dogs</a>
+    <a href="~/Pets/">All</a>
+    <a href="~/Pets?Species=Cat">Cats</a>
+    <a href="~/Pets?Species=Dog">Dogs</a>
 </h4>
 
 <head>
@@ -145,8 +145,10 @@
         <div class="row">
             @foreach (var item in Model.Pet)
             {
-                <div class="col-xs-8 col-sm-4 col-md-2 col-lg-2 petBoxes"><a href="https://localhost:5001/Pets/Details?id=@item.ID">@Html.DisplayFor(modelItem => item.Name)</a> :: @Html.DisplayFor(modelItem => item.Breed)<br />
-                    @Html.DisplayFor(modelItem => item.Sex) :: @Html.DisplayFor(modelItem => item.Age)</div>
+                <div class="col-xs-8 col-sm-4 col-md-2 col-lg-2 petBoxes">
+                    <a href="~/Pets/Details?id=@item.ID">@Html.DisplayFor(modelItem => item.Name)</a> :: @Html.DisplayFor(modelItem => item.Breed)<br />
+                    @Html.DisplayFor(modelItem => item.Sex) :: @Html.DisplayFor(modelItem => item.Age)
+                </div>
             }
         </div>
     </div>
