--- a/PawsClaws/Pages/Index.cshtml
+++ b/PawsClaws/Pages/Index.cshtml
@@ -5,23 +5,21 @@
 }
     <div class="container-fluid">
         <div class="row">
-            <div class="col-md-8">
                     <div id="myCarousel" class="carousel slide" data-ride="carousel" data-interval="6000" style="width:900px !important">
                         <ol class="carousel-indicators">
                             <li data-target="#myCarousel" data-slide-to="0" class="active"></li>
                             <li data-target="#myCarousel" data-slide-to="1"></li>
                             <li data-target="#myCarousel" data-slide-to="2"></li>
                         </ol>
-                        <div class="carousel-inner" role="listbox" style="height: 600px !important; width:900px !important">
+                        <div class="carousel-inner" role="listbox" style="height: 600px !important;">
                             <div class="item active">
-                                <img src="~/images/HappyDogLogo.jpg" alt="DogLogo" class="img-responsive" />
+                                <a asp-page="/Pets/Index"><img src="~/images/HappyDogLogo.jpg" alt="DogLogo" class="img-responsive" /></a>
                             </div>
                             <div class="item">
-                                <img src="~/images/Nic.jpg" alt="NicPic" class="img-responsive" />
+                                <a asp-page="/Contact"><img src="~/images/Nic.jpg" alt="NicPic" class="img-responsive" /></a>
                             </div>
                             <div class="item">
-                                <img src="~/images/OurStoryPic.jpg" alt="About page" class="img-responsive" />
-                            </div>
+                                <a asp-page="/About"><img src="~/images/OurStoryPic.jpg" alt="About page" class="img-responsive" /></a></div>
                         </div>
                         <a class="left carousel-control" href="#myCarousel" role="button" data-slide="prev">
                             <span class="glyphicon glyphicon-chevron-left" aria-hidden="true"></span>
@@ -32,21 +30,6 @@
                             <span class="sr-only">Next</span>
                         </a>
                     </div>
-            </div>
-            <div class="col-md-4  float-right"">
-                <div id="hours">
-                    <h2>Hours</h2>
-                    <ul>
-                        <li>Sunday     Closed</li>
-                        <li>Monday     10AM-2PM</li>
-                        <li>Tuesday    10AM-2PM</li>
-                        <li>Wednesday  10AM-2PM</li>
-                        <li>Thursday   10AM-2PM</li>
-                        <li>Friday     10AM-2PM</li>
-                        <li>Saturday   10AM-2PM</li>
-                    </ul>
-                </div>
-            </div>
         </div>
             <div class="row">
                 <div class="col-md-3">
