IMAGE SUPPORT. When creating a new pet, one or more images of said pet can now be uploaded. Supports .png and .jpg. You can see some of my tests using photos of Jeb Bush.
-Todo: display the images on the pets page
-Todo: delete image directories when pets are deleted
-Todo: possibly add a reference string to the database? I looked into this but it's kinda complex, and the way I structured the directories should make things easy enough to find without modifying the database schema.

--- a/PawsClaws/Pages/Pets/Create.cshtml
+++ b/PawsClaws/Pages/Pets/Create.cshtml
@@ -11,7 +11,7 @@
 <hr />
 <div class="row">
     <div class="col-md-4">
-        <form method="post">
+        <form method="post" enctype="multipart/form-data">
             <div asp-validation-summary="ModelOnly" class="text-danger"></div>
             <div class="form-group">
                 <label asp-for="Pet.Name" class="control-label"></label>
@@ -79,20 +79,14 @@
                 <span asp-validation-for="Pet.Description" class="text-danger"></span>
             </div>
             <div class="form-group">
+                <div class="col-md-10">
+                    <p>Add one or more photos of the animal:</p>
+                    <input type="file" name="Files" accept="image/png, image/jpg, image/jpeg" multiple/>
+                </div>
+            </div>
+            <div class="form-group">
                 <input type="submit" value="Create" class="btn btn-default" />
             </div>
-        </form>
-        <form enctype="multipart/form-data" method="post">
-            <dl>
-                <dt>
-                    <label asp-for="FileUpload.FormFile"></label>
-                </dt>
-                <dd>
-                    <input asp-for="FileUpload.FormFile" type="file">
-                    <span asp-validation-for="FileUpload.FormFile"></span>
-                </dd>
-            </dl>
-            <input asp-page-handler="Upload" class="btn" type="submit" value="Upload" />
         </form>
     </div>
 </div>
