--- a/PawsClaws/Pages/Pets/Details.cshtml
+++ b/PawsClaws/Pages/Pets/Details.cshtml
@@ -92,6 +92,7 @@
     </dl>
 </div>
 <div>
+    <a asp-page="./Delete" asp-route-id="@Model.Pet.ID">Delete</a> |
     <a asp-page="./Edit" asp-route-id="@Model.Pet.ID">Edit</a> |
     <a asp-page="./Index">Back to List</a>
 </div>
