--- a/PawsClaws/Pages/Pets/Index.cshtml
+++ b/PawsClaws/Pages/Pets/Index.cshtml
@@ -9,27 +9,31 @@
 
 <h4 style="text-align: center; word-spacing: 50px;">
     <a href="~/Pets/">All</a>
-    <a href="~/Pets?Species=Cat">Cats</a>
-    <a href="~/Pets?Species=Dog">Dogs</a>
+    <a href="~/Pets/Cat">Cats</a>
+    <a href="~/Pets/Dog">Dogs</a>
 </h4>
 
 <head>
     <style type="text/css">
-        .petBoxes {
-            background-color: aliceblue;
-            border: 1px solid black;
-            height: 120px;
-            padding: 10px 10px 10px 10px;
-            text-align: center;
-        }
-    </style>
-
-    <style type="text/css">
-        .mainBox {
+        #mainBox {
+            display: table;
             background-color: dimgray;
             border: 1px solid #000000;
             height: 100%;
-            padding: 100px 50px 100px 50px;
+            width: 100%;
+            margin: auto;
+            padding: 5% 5% 5% 7%;
+            align-items: center;
+        }
+
+        #mainBox > div {
+            display: table-cell;
+            background-color: aliceblue;
+            border: 1px solid black;
+            height: 205px;
+            width: 270px;
+            padding: 10px;
+            text-align: center;
         }
     </style>
 
@@ -41,15 +45,19 @@
 
 
 <body>
-    <div class="container-fluid mainBox">
-        <div class="row">
-            @foreach (var item in Model.Pet)
-            {
-                <div class="col-xs-8 col-sm-4 col-md-2 col-lg-2 petBoxes">
-                    <a href="~/Pets/Details?id=@item.ID">@Html.DisplayFor(modelItem => item.Name)</a> :: @Html.DisplayFor(modelItem => item.Breed)<br />
+    <div class="container-fluid" id="mainBox">
+       @foreach (var item in Model.Pet)
+        {
+            <div class="col-lg-6 col-md-4 col-sm-2 col-xs-1">
+                <div class="align-top">
+                    <a href="/Pets/Details/@item.ID"><img src="~/images/@item.ID/thumb.jpg" /> </a>
+                </div>
+                <div class="align-bottom">
+                    <a href="/Pets/Details/@item.ID">@Html.DisplayFor(modelItem => item.Name)</a> :: @Html.DisplayFor(modelItem => item.Breed)<br />
                     @Html.DisplayFor(modelItem => item.Sex) :: @Html.DisplayFor(modelItem => item.Age)
                 </div>
-            }
-        </div>
+            </div>
+        }
     </div>
 </body>
+ 
